# util

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
.xmake/linux/x86_64/cache/: detect
app/simpleBtree/: CMakeLists.txt  btree.cc  btree.h  btree_test.cc
app/simpleDB/: CMakeLists.txt  btree.cc  btree.h  buffer_pool.cc  buffer_pool.h  db.h  db_test.cc
app/simpleKV/: CMakeLists.txt  simplekv_client.c  simplekv_client.h  simplekv_server.c  simplekv_server.cc
app/simpleTrie/: makefile  trie.h  trie_test  trie_test.cc
c/: CMakeLists.txt  ae.c  ae.h  ae_client.c  ae_server.c  ae_timer_test.c  hash.c  hashtable.c  logging.h  ngxlock.h  ngxlock_test.c  rte_memcpy.h  rte_memcpy_test.c  sds.h  slab.c  slab.h
c-util/: CMakeLists.txt  adlist.c  adlist.h  ae.c  ae.cc  ae.h  ae_calculator_server.c  ae_client.c  coroutine.c  coroutine.h  hashtable.c  hashtable.h  mempool.c  ngx_lock.c  ngx_lock.h  rds_hashtable.c  rds_hashtable.h  rte_ring_test.c  sched_setaffinity.c  sds.c  sds.h  shmem.h  slab.c  slab.h  slab_test.c
c_utils/: ae_server.c  hashtable.h  rte_ring.h
cpp/: CMakeLists.txt  arena.cc  arena_test.cc  bitmap.h  bitmap_test.cc  block.h  block_cache.h  bloomfilter.h  bloomfilter_test.cc  bufferpool.cc  bufferpool.h  cache.h  cache_test.cc  disk_manager_test.cc  easylog.cc  easylog.conf  easylog.h  easylog_test.cc  hashtable.cc  hashtable.h  logging.h  lrucache_test.cc  murmur2.h  murmurhash.h  ring.h  ringbuffer.cc  ringbuffer.h  ringbuffer_test.cc  rte_memcpy.h  rte_memcpy_test.cc  rwlock_test.cc  slice.h  smart_ptr.cc  smart_ptr.h  smart_ptr_test.cc  spinlock.cc  spinlock.h  spinlock_test.cc  stringhandler.h  tc_threadpool.cc  (+4 more)
cpp-util/: CMakeLists.txt  LockfreeQueue.h  LockfreeQueue_test.cc  Random.h  arena.h  arena_test.cc  bitmap.h  bitmap64.h  bitmap8.h  bloom.h  bloomfilter.h  bufferpool.cc  bufferpool.h  cas_hashtable.h  cmdline.h  cmdline_test.cc  coding.h  commom.h  concurrentqueue.h  condvar.h  disk_manager.cc  disk_manager.h  doctest_demo.cc  epoller.cc  epoller.h  extendible_hashing.h  header.h  histogram.cc  histogram.h  lock.h  lockfreeQueue.h  lockfreeQueue_nocheck.h  logging.h  lrucache.h  lrucache_test.cc  memory_trace.h  murmur2.h  murmur3.h  page.h  page_cache.h  (+24 more)
cpp-util/cache/: CMakeLists.txt  cache.hh  cache_policy.hh  lfu_cache_policy.hh  lru_cache_policy.hh  lrucache_stl.hh  test.cc
cpp-util/coroutine/: CMakeLists.txt  coro.cc  coro.h  coro_test.cc  jump_fcontext.S  make_fcontext.S
cpp-util/cuckoomap/: bucket_container.hh  cuckoohash_config.hh  cuckoohash_map.hh  cuckoohash_util.hh  test.cc
cxx_utils/: arena.cc  bufferpool_test.cc  disk_manager.h  hashtable.cc  hashtable_test.cc  net_buffer.cc  ring.hh  string_util_test.cc
example/clht/: CMakeLists.txt  test.cc
example/dpdk/: Makefile  ring_example.c  ring_test  slab  slab.c
example/eprc/: client.cc  config.h  server.cc
example/flame_graph/: perf_test  perf_test.cc  run.sh
example/io_uring/: io_uring_cat  io_uring_cat.c  liburing_cat  liburing_cat.c  makefile
example/jemalloc/: jemalloc_test  jemalloc_test.cc  makefile
example/libaio/: Makefile  aioworker.h  simple.cc  test  timer.h
example/libco/: CMakeLists.txt  simple_example.cc
example/libevent/: CMakeLists.txt  client.cc  echo_server.cc
example/libevent-client/: xmake.lua
example/libevent-server/: xmake.lua
example/libgo/: CMakeLists.txt  multi_thread.cc  simpe_use.cc
example/lz4/: xmake.lua
example/mmap/: CMakeLists.txt  main.cc
example/nvmf/: cli  makefile  nvmf_cli.c  nvmf_tgt.c  xmake.lua
example/pmdk/: CMakeLists.txt  hello_world.cc  libpmem.cc
example/rdma/: CMakeLists.txt  rdma_cli.c  rdma_common.c  rdma_common.h  rdma_server.c  xmake.lua
example/redis/: xmake.lua
example/rocksdb/: CMakeLists.txt  env.h  simple_example.cc  status.h
example/spdlog/: CMakeLists.txt  async_file_logging.cc
example/spdlog/logs/: async_log.txt
example/tbb/: CMakeLists.txt  tbb_hashmap.cc
example/tmp/: CMakeLists.txt  mw_to_sw.cc  simple_heap.cc
include/: commom.hh
libevent-server/: a.proto
nvmf/: xmake.lua
python/: base36.py  login_session.py  redis-conn.py  redis-counter.py  redis-lock.py  redis-shorturl.py
rdma/: rdma_cli.c  rdma_common.h  rdma_server.c  xmake.lua
redis/: libevent-hiredis-async.cc
rocksdb/: simple_example.cc  xmake.lua
test/: CMakeLists.txt  LockfreeQueue_test.cc  Makefile  adlist_test.cc  arena_test.cc  bitmap_test.cc  bloom_filter_test.cc  c_filelib_test  c_filelib_test.c  coroutine_test.cc  disk_manager_test.cc  epoller_test.cc  glibc_fileop_test.cc  hash_algorithm_test.cc  hashtable_test.cc  lock_test.cc  lockfreeQueue_test.cc  lrucache_test.cc  ngx_lock_test.cc  page_cache_test.cc  ska_hashtable_test.cc  skiplist_test.cc  test_main.cc  threadpool_test.cc  trie_test.cc
test/dataset/: gen  gen.cxx
xmake/: CMakeLists.txt  pkg_test.cc  xmake.lua
xmake-demo/: xmake.lua
xmake-demo/client/: client.c  client.cc
xmake-demo/cpp/: bufferpool.h  common.h  logging.h  memory_trace.h  murmur2.h  murmur3.h  net_buffer.h  page.h  smart_ptr.h  smart_ptr_test.cc  threadpool_test.cc
xmake-demo/lz4/: lz4.c  lz4_test.c
xmake-demo/rdma/: rdma_common.cc  rdma_common.h  rdma_server.cc
xmake-demo/src/: main.cpp  server.cc
xmake-demo/tbb/: tbb_hashmap.cc
xmake-demo/zlib/: zlib_test.c
xmake/c_utils/: CMakeLists.txt  get_tick.h  hashtable.c  ngxlock.c  rte_ring.c  shmem.h  slab_test.c  xmake.lua
xmake/cxx_utils/: arena.h  hashtable.h  lrucache.h  rwlock.h  string_util.h  thread_pool.hh
xmake/libevent-server/: server.cc
xmake/nvmf/: xmake.lua
xmake/redis/: hiredis-pipeline.cc
xmake/rocksdb/: simple_example.cc
xmake/tbb/: xmake.lua
zlib/: xmake.lua
